Update workspace and dependencies